--- a/src/Payments/Payments.form
+++ b/src/Payments/Payments.form
@@ -82,11 +82,7 @@
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jSeparator1" max="32767" attributes="0"/>
-                          </Group>
-                          <Group type="102" attributes="0">
-                              <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="103" alignment="0" groupAlignment="1" attributes="0">
                                       <Group type="102" alignment="1" attributes="0">
@@ -118,21 +114,23 @@
                                   <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace min="0" pref="107" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="payableAmount" max="32767" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="balanceLable" max="32767" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="payableAmount" alignment="1" min="-2" pref="484" max="-2" attributes="0"/>
+                                  <Component id="jSeparator1" max="32767" attributes="0"/>
+                                  <Group type="102" alignment="1" attributes="0">
+                                      <Component id="myButton10" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace max="32767" attributes="0"/>
+                                      <Component id="invoiceID" min="-2" pref="227" max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="myButton10" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="32767" attributes="0"/>
-                              <Component id="invoiceID" min="-2" pref="227" max="-2" attributes="0"/>
+                              <Component id="prepaidAmount" min="-2" pref="422" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -151,14 +149,16 @@
                       <Component id="jSeparator1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="payableAmount" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
+                      <EmptySpace pref="9" max="32767" attributes="0"/>
+                      <Component id="prepaidAmount" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="cashAmount" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
                           <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                       <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -170,16 +170,14 @@
                           <Component id="cardBillNo" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
                           <Component id="jLabel8" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                       <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="qrAmount" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
                           <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
-                      <Component id="balanceLable" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -297,14 +295,6 @@
                 <Property name="text" type="java.lang.String" value="QR payment "/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="balanceLable">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Segoe UI" size="22" style="1"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="Balance : Rs. 0.00"/>
-              </Properties>
-            </Component>
             <Component class="button.MyButton" name="myButton10">
               <Properties>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -336,6 +326,14 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="myButton10ActionPerformed"/>
               </Events>
             </Component>
+            <Component class="javax.swing.JLabel" name="prepaidAmount">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI" size="22" style="1"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Prepaid Amount : Rs. 0.00"/>
+              </Properties>
+            </Component>
           </SubComponents>
         </Container>
         <Container class="javax.swing.JPanel" name="jPanel3">
@@ -348,7 +346,7 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
+                  <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="conform" max="32767" attributes="0"/>
@@ -384,6 +382,7 @@
                                   <Component id="clearButton" max="32767" attributes="0"/>
                               </Group>
                           </Group>
+                          <Component id="balanceLable" alignment="0" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -391,41 +390,43 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="balanceLable" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="myButton1" alignment="3" min="-2" pref="86" max="-2" attributes="0"/>
-                          <Component id="myButton2" alignment="3" min="-2" pref="86" max="-2" attributes="0"/>
-                          <Component id="myButton3" alignment="3" min="-2" pref="86" max="-2" attributes="0"/>
+                          <Component id="myButton1" alignment="3" min="-2" pref="75" max="-2" attributes="0"/>
+                          <Component id="myButton2" alignment="3" min="-2" pref="75" max="-2" attributes="0"/>
+                          <Component id="myButton3" alignment="3" min="-2" pref="75" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="myButton4" alignment="3" min="-2" pref="86" max="-2" attributes="0"/>
-                              <Component id="myButton5" alignment="3" min="-2" pref="86" max="-2" attributes="0"/>
+                          <Group type="103" alignment="1" groupAlignment="3" attributes="0">
+                              <Component id="myButton4" alignment="3" min="-2" pref="75" max="-2" attributes="0"/>
+                              <Component id="myButton5" alignment="3" min="-2" pref="75" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="myButton6" min="-2" pref="86" max="-2" attributes="0"/>
+                          <Component id="myButton6" min="-2" pref="75" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="myButton9" alignment="3" min="-2" pref="86" max="-2" attributes="0"/>
-                          <Component id="myButton7" alignment="3" min="-2" pref="86" max="-2" attributes="0"/>
-                          <Component id="myButton8" alignment="3" min="-2" pref="86" max="-2" attributes="0"/>
+                          <Component id="myButton9" alignment="3" min="-2" pref="75" max="-2" attributes="0"/>
+                          <Component id="myButton7" alignment="3" min="-2" pref="75" max="-2" attributes="0"/>
+                          <Component id="myButton8" alignment="3" min="-2" pref="75" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="myButton00" alignment="3" min="-2" pref="86" max="-2" attributes="0"/>
-                          <Component id="myButton0" alignment="3" min="-2" pref="86" max="-2" attributes="0"/>
-                          <Component id="backspaceButton" alignment="3" min="-2" pref="86" max="-2" attributes="0"/>
+                          <Component id="myButton00" alignment="3" min="-2" pref="75" max="-2" attributes="0"/>
+                          <Component id="myButton0" alignment="3" min="-2" pref="75" max="-2" attributes="0"/>
+                          <Component id="backspaceButton" alignment="3" min="-2" pref="75" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="dotButton" alignment="3" min="-2" pref="86" max="-2" attributes="0"/>
-                          <Component id="clearButton" alignment="3" min="-2" pref="86" max="-2" attributes="0"/>
+                          <Component id="dotButton" alignment="3" min="-2" pref="75" max="-2" attributes="0"/>
+                          <Component id="clearButton" alignment="3" min="-2" pref="75" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="conform" min="-2" pref="86" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="conform" min="-2" pref="70" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -837,6 +838,14 @@
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="conformActionPerformed"/>
               </Events>
+            </Component>
+            <Component class="javax.swing.JLabel" name="balanceLable">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI" size="26" style="1"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Balance : Rs. 0.00"/>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
